# Suburban_SOC

./: .agyrule  .gitattributes  .gitignore  .gitleaks.toml  .yamllint  README.md  UIW_Audit_Report.html  UIW_SuburbanSOC_Commands.html  audit_repo.sh  coverage_checklist.md  planned_execution.md  pyproject.toml
.agents/: AGENTS.md
.antigravitycli/: 60c9c106-5c7d-4fdd-95d2-57ac5970dbdc.json
.github/: CODEOWNERS
configs/: logstash.conf  logstash.yml
docs/: AI_conversation_transcript.md  CONVENTIONS.md  Playbook-Structure.md  SOC-maturity-roadmap.md  SOP-001-pipeline-operations.md  SOP-003-dashboard-operations.md  SOP-004-data-retention.md  SOP-005-reliability.md  SOP-007-change-management.md  SOP-008-vuln-management.md  SOP-009-rbac.md  SOP-010-audit-trail.md  SOP-011-encryption.md  SOP-012-privacy-data-handling.md  SOP-013-ccm.md  SOP-022-anomaly-validation.md  SOP-147-evidence-validation-runbook.md  Zeek_ELK_Pipeline.md  compliance_matrix.md  cost-breakdown-analysis.md  deploy-changelog.md  implementation_plan.md  logstash_validation.md  master_pipeline_guide.md  presentation_slides.md
evidence/: README.md
findings/: 2026-06-28-147-dashboards.md  2026-06-28-147-remaining-requirements.md  20260629-dashboard-panel-audit.md  20260707-160-161-logstash-ecs-geoip.md
hunts/: HUNT-001-mshta-remote.yml  HUNT-002-auth-bruteforce.yml  HUNT-003-rare-dest-ports.yml  HUNT-004-external-beacon.yml  HUNT-005-lolbin-download.yml
logs/: session-20260709-local-gate.md
plans/: 2026-06-28-147-remaining-evidence.md  20260709-detection-coverage-gaps.md  (+2 more)
scripts/: README.md  (+1 more)
(+213 files in other folders)
